# streamrec

./: .gitignore  .pylintrc  Dockerfile  README.md  dockertest.py  pyproject.toml  tox.ini
.github/workflows/: docker.yml  release.yml  tag.yml  test-build-push-tag.yml  tox.yml
streamrec/: app.py  config.py  packet.py  recorder.py  segmentfile.py  session.py  test_config.py  test_packet.py  test_segmentfile.py  test_session.py
tests/: test_recorder.py  test_server.py
